dataset1235/2025-2/805158916/users/3563627350/executions/1584167357_2403290319.log
== SUBMISSION (2025-08-27 14:22:47)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco_unitario * quantidade
print(valo_total)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:23:53)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco_unitario * quantidade
print(valo_total)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:21:54)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco_unitaio * quantidade
print(valo_total)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_total = preco_unitaio * quantidade
                  ^^^^^^^^^^^^^
NameError: name 'preco_unitaio' is not defined. Did you mean: 'preco_unitario'?
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_total = preco_unitaio * quantidade
                  ^^^^^^^^^^^^^
NameError: name 'preco_unitaio' is not defined. Did you mean: 'preco_unitario'?
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_total = preco_unitaio * quantidade
                  ^^^^^^^^^^^^^
NameError: name 'preco_unitaio' is not defined. Did you mean: 'preco_unitario'?
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_total = preco_unitaio * quantidade
                  ^^^^^^^^^^^^^
NameError: name 'preco_unitaio' is not defined. Did you mean: 'preco_unitario'?
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_total = preco_unitaio * quantidade
                  ^^^^^^^^^^^^^
NameError: name 'preco_unitaio' is not defined. Did you mean: 'preco_unitario'?
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_total = preco_unitaio * quantidade
                  ^^^^^^^^^^^^^
NameError: name 'preco_unitaio' is not defined. Did you mean: 'preco_unitario'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:26:29)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco_unitario * quantidade
print(valo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:27:21)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco_unitario * quantidade
print(valor_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2432.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
450.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
662.0
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
77.0
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
350.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:21:55)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco_unitaio * quantidade
print(valo_total)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_total = preco_unitaio * quantidade
                  ^^^^^^^^^^^^^
NameError: name 'preco_unitaio' is not defined. Did you mean: 'preco_unitario'?
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_total = preco_unitaio * quantidade
                  ^^^^^^^^^^^^^
NameError: name 'preco_unitaio' is not defined. Did you mean: 'preco_unitario'?
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_total = preco_unitaio * quantidade
                  ^^^^^^^^^^^^^
NameError: name 'preco_unitaio' is not defined. Did you mean: 'preco_unitario'?
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_total = preco_unitaio * quantidade
                  ^^^^^^^^^^^^^
NameError: name 'preco_unitaio' is not defined. Did you mean: 'preco_unitario'?
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_total = preco_unitaio * quantidade
                  ^^^^^^^^^^^^^
NameError: name 'preco_unitaio' is not defined. Did you mean: 'preco_unitario'?
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_total = preco_unitaio * quantidade
                  ^^^^^^^^^^^^^
NameError: name 'preco_unitaio' is not defined. Did you mean: 'preco_unitario'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:23:47)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco_unitario * quantidade
print(valo_total)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:22:08)
-- CODE: 
preco_unitario = float(input())
quantidade = int(input())
valor_total = preco_unitario * quantidade
print(valo_total)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(valo_total)
          ^^^^^^^^^^
NameError: name 'valo_total' is not defined. Did you mean: 'valor_total'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
